Update Model, Sample, Server, dan Frontend

--- a/server/model/latihan.ipynb
+++ b/server/model/latihan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "175cc63b",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "3fac7248",
    "metadata": {},
    "outputs": [
@@ -57,47 +57,47 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>359.934283</td>\n",
-       "      <td>14.585207</td>\n",
-       "      <td>2.647689</td>\n",
-       "      <td>0.080461</td>\n",
-       "      <td>99.945317</td>\n",
+       "      <td>13281.276525</td>\n",
+       "      <td>13.172339</td>\n",
+       "      <td>6.691711</td>\n",
+       "      <td>0.050865</td>\n",
+       "      <td>99.990412</td>\n",
        "      <td>Sangat Baik</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>345.317261</td>\n",
-       "      <td>19.737638</td>\n",
-       "      <td>2.767435</td>\n",
-       "      <td>0.040611</td>\n",
-       "      <td>99.960851</td>\n",
+       "      <td>16331.603750</td>\n",
+       "      <td>35.957706</td>\n",
+       "      <td>5.431525</td>\n",
+       "      <td>0.163004</td>\n",
+       "      <td>99.994967</td>\n",
        "      <td>Sangat Baik</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>340.731646</td>\n",
-       "      <td>13.602811</td>\n",
-       "      <td>2.241962</td>\n",
-       "      <td>0.011734</td>\n",
-       "      <td>99.915502</td>\n",
+       "      <td>11467.442269</td>\n",
+       "      <td>9.411797</td>\n",
+       "      <td>4.862291</td>\n",
+       "      <td>0.072086</td>\n",
+       "      <td>99.998931</td>\n",
        "      <td>Sangat Baik</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>338.754249</td>\n",
-       "      <td>11.961507</td>\n",
-       "      <td>2.314247</td>\n",
-       "      <td>0.031840</td>\n",
-       "      <td>99.921754</td>\n",
+       "      <td>12196.549006</td>\n",
+       "      <td>2.088432</td>\n",
+       "      <td>6.971013</td>\n",
+       "      <td>0.185696</td>\n",
+       "      <td>99.996131</td>\n",
        "      <td>Sangat Baik</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>379.312975</td>\n",
-       "      <td>14.322671</td>\n",
-       "      <td>2.067528</td>\n",
-       "      <td>0.021505</td>\n",
-       "      <td>99.939112</td>\n",
+       "      <td>19590.602872</td>\n",
+       "      <td>17.072167</td>\n",
+       "      <td>8.048031</td>\n",
+       "      <td>0.379041</td>\n",
+       "      <td>99.996104</td>\n",
        "      <td>Sangat Baik</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -105,27 +105,27 @@
        "</div>"
       ],
       "text/plain": [
-       "   throughput      delay    jitter  packet_loss  availability        label\n",
-       "0  359.934283  14.585207  2.647689     0.080461     99.945317  Sangat Baik\n",
-       "1  345.317261  19.737638  2.767435     0.040611     99.960851  Sangat Baik\n",
-       "2  340.731646  13.602811  2.241962     0.011734     99.915502  Sangat Baik\n",
-       "3  338.754249  11.961507  2.314247     0.031840     99.921754  Sangat Baik\n",
-       "4  379.312975  14.322671  2.067528     0.021505     99.939112  Sangat Baik"
+       "     throughput      delay    jitter  packet_loss  availability        label\n",
+       "0  13281.276525  13.172339  6.691711     0.050865     99.990412  Sangat Baik\n",
+       "1  16331.603750  35.957706  5.431525     0.163004     99.994967  Sangat Baik\n",
+       "2  11467.442269   9.411797  4.862291     0.072086     99.998931  Sangat Baik\n",
+       "3  12196.549006   2.088432  6.971013     0.185696     99.996131  Sangat Baik\n",
+       "4  19590.602872  17.072167  8.048031     0.379041     99.996104  Sangat Baik"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../sample/qos_dataset_5skala.csv\")\n",
+    "df = pd.read_csv(\"../sample/sample-fixx.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1c70832b",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "606f4759",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "dac24d04",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "1e4edbec",
    "metadata": {},
    "outputs": [],
@@ -195,23 +195,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "12fbad20",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.13341756, 0.37942017, 0.24872219, 0.13886637, 0.85429075],\n",
-       "       [0.19196311, 0.23002505, 0.31545318, 0.21518929, 0.76575863],\n",
-       "       [0.0521913 , 0.66627414, 0.74380004, 0.46219   , 0.33033853],\n",
+       "array([[0.05479716, 0.37118578, 0.41997514, 0.2627718 , 0.91180596],\n",
+       "       [0.08566527, 0.365103  , 0.46863147, 0.30347487, 0.90240416],\n",
+       "       [0.02179505, 0.50504237, 0.97367613, 0.68710394, 0.171251  ],\n",
        "       ...,\n",
-       "       [0.16354523, 0.36593723, 0.40631529, 0.18405129, 0.73615055],\n",
-       "       [0.8044345 , 0.0159709 , 0.01498315, 0.00450379, 0.99684968],\n",
-       "       [0.58284286, 0.05772634, 0.06662059, 0.02208426, 0.97768417]])"
+       "       [0.09830558, 0.48892037, 0.41298409, 0.30059878, 0.9307033 ],\n",
+       "       [0.63232484, 0.01557519, 0.07840054, 0.0314088 , 0.99994011],\n",
+       "       [0.4124466 , 0.15682761, 0.17910746, 0.07207675, 0.98465007]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "bc919454",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "bf12d9fd",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "36c90a0d",
    "metadata": {},
    "outputs": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "348cffd4",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "8e26dd89",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "3e6e52d0",
    "metadata": {},
    "outputs": [
